# University-lab-works

семестр 1(основи програмування)/: ЛР-10_Дробот_Михайло_ОІ-12.docx  ЛР-11_Дробот_Михайло_ОІ-12.docx  ЛР-12_Дробот_Михайло_ОІ-12.docx  ЛР-13_Дробот_Михайло_ОІ-12.docx  ЛР-1_Дробот_Михайло_ОІ-12.docx  ЛР-2_Дробот_Михайло_ОІ-12.docx  ЛР-3_Дробот_Михайло_ОІ-12.docx  ЛР-4_Дробот_Михайло_ОІ-12.docx  ЛР-5_Дробот_Михайло_ОІ-12.docx  ЛР-6_Дробот_Михайло_ОІ-12.docx  ЛР-7_Дробот_Михайло_ОІ-12.docx  ЛР-8_Дробот_Михайло_ОІ-12.docx  ЛР-9_Дробот_Михайло_ОІ-12.docx  РГР_Дробот_Михайло_ОІ-12.docx
семестр 2(алгоритми та структури даних)/: ЛР-10_Дробот_Михайло_ОІ-12.docx  ЛР-11_Дробот_Михайло_ОІ-12.docx  ЛР-1_Дробот_Михайло_ОІ-12.docx  ЛР-2_Дробот_Михайло_ОІ-12.docx  ЛР-3_Дробот_Михайло_ОІ-12.docx  ЛР-4_Дробот_Михайло_ОІ-12.docx  ЛР-5_Дробот_Михайло_ОІ-12.docx  ЛР-6_Дробот_Михайло_ОІ-12.docx  ЛР-7_Дробот_Михайло_ОІ-12.docx  ЛР-8_Дробот_Михайло_ОІ-12.docx  ЛР-9_Дробот_Михайло_ОІ-12.docx
семестр 3(курсова робота)/: КР_АСД_Дробот_Михайло_ОІ22.docx
семестр 8(дипломна робота)/ESP32_Gateway/main/: CMakeLists.txt  ble_server.c  crypto.c  display_task.c  display_task.h  main.c  radio_task.c  radio_task.h
семестр 8(дипломна робота)/GpsTracking/: settings.gradle
семестр 8(дипломна робота)/GpsTracking/app/: build.gradle
семестр 8(дипломна робота)/myLoraProject/: CMakeLists.txt
семестр 8(дипломна робота)/myLoraProject/main/: CMakeLists.txt  battery.c  battery.h  ble_server.c  ble_server.h  crypto.c  crypto.h  data_types.h  display_task.c  radio_task.c  radio_task.h
(+15 files in other folders)
