idf_component_register(SRCS "battery.c" "main.c"
                              "display_task.c" 
                            "ble_server.c"
                            "crypto.c"
                            "radio_task.c"
                            "battery.c"
                       INCLUDE_DIRS ".")